--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 TOKEN=yourTokenHere
+DATABASE_URL=postgresql://user:password@localhost/db
 OWNER=userID
 PREFIX=thing
 AES_KEY=sdfhalskfjaslghfjghasfjklasdhfasjdfhjk
+SUPPORT_SERVER=https://discord.gg/notarealinvite
