log bot joins/leaves

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ OWNER=userID
 PREFIX=thing
 AES_KEY=sdfhalskfjaslghfjghasfjklasdhfasjdfhjk
 SUPPORT_SERVER=https://discord.gg/notarealinvite
+JOIN_LEAVE_LOG=0
