add role events

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ PREFIX=thing
 AES_KEY=sdfhalskfjaslghfjghasfjklasdhfasjdfhjk
 SUPPORT_SERVER=https://discord.gg/notarealinvite
 JOIN_LEAVE_LOG=0
+DEBUG_LOGGING=false
