--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 TOKEN=yourTokenHere
 DATABASE_URL=postgresql://user:password@localhost/db
 OWNER=userID
-PREFIX=thing
+PREFIXES=thing1,thing2
 AES_KEY=sdfhalskfjaslghfjghasfjklasdhfasjdfhjk
 SUPPORT_SERVER=https://discord.gg/notarealinvite
 JOIN_LEAVE_LOG=0
