add sentry integration for logging errors

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 TOKEN=yourTokenHere
 DATABASE_URL=postgresql://user:password@localhost/db
+SENTRY_URL=sentryUrl
 OWNER=userID
 PREFIXES=thing1,thing2
 AES_KEY=sdfhalskfjaslghfjghasfjklasdhfasjdfhjk
