--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
 TOKEN=yourTokenHere
 DATABASE_URL=postgresql://user:password@localhost/db
-SENTRY_URL=sentryUrl
+REDIS=localhost:6379
 OWNER=userID
 PREFIXES=thing1,thing2
-AES_KEY=sdfhalskfjaslghfjghasfjklasdhfasjdfhjk
-SUPPORT_SERVER=https://discord.gg/notarealinvite
-JOIN_LEAVE_LOG=0
-DEBUG_LOGGING=false
+AES_KEY=ad97zmwmo7nm9TUU9K2XsDozTclX+nJ7+WcS/NVoVAU=
